Fixed text shadow alignment

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -103,7 +103,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  text-shadow: 1px 3px 1px rgba($color: #000000, $alpha: 0.07);
+  text-shadow: 1px 2px 1px rgba($color: #000000, $alpha: 0.05);
   color: #a18a75;
 }
 
